# isenchef

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-menu.ps1
include/: actions.h  bitkitchen.h  encoders.h  isenchef.h  processor.h
src/: actions.c  args.c  encoders.c  file_io.c  main.c  processor.c
test_files/: base64_input.txt  caesar_input.txt  hex_input.txt  hex_output.txt  lowercase_input.txt  rc4_input.txt  roundtrip_input.txt  uppercase_input.txt  xor_input.txt
